src/objects/CCF_Upstream__c.object
<CustomObject>
    <description>CCF Application</description>
    <fields>
        <fullName>CCF_Request__c</fullName>
        <label>CCF Request</label>
        <referenceTo>CCF_Request_Header__c</referenceTo>
        <relationshipLabel>Upstreams</relationshipLabel>
        <relationshipName>Upstreams</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Country_CCF</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Delivery_Lead_Time_Days__c</fullName>
        <label>Delivery Lead Time (Days)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Incoterm__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Incoterm</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Static_Data__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Incoterm</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Static_Data__c</referenceTo>
        <relationshipLabel>Upstreams (Incoterm)</relationshipLabel>
        <relationshipName>Upstreams1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Material_Description__c</fullName>
        <label>Material Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Material_ID__c</fullName>
        <label>Material ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Terms_Description__c</fullName>
        <label>Payment Terms Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Plant_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plant Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Static_Data__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Plant</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Static_Data__c</referenceTo>
        <relationshipLabel>Upstreams</relationshipLabel>
        <relationshipName>Upstreams</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_Unit_of_Measure__c</fullName>
        <label>Quantity Unit of Measure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Trade_Name__c</fullName>
        <label>Trade Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Scale__c</fullName>
        <label>Unit Scale</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>CCF Upstream</label>
    <nameField>
        <displayFormat>UPS-{0000}</displayFormat>
        <label>Upstream No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Upstreams</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>